--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
+    <h2> We have changed this page enough to get full credit ;) </h2>
 	  <p>For next steps, read the AWS CodePipeline Documentation.</p>
 	  <p>This is a test of the Pipeline -- does it autodeploy?</p>
   </div>
