--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
   </style>
 </head>
-<body>
+<body bgcolor = "#5DADE2">
   <div align="center">
     <h1>KRUSTY KRAB IS UNFAIR!</h1>
 	  <h1>MR KRABS IS IN THERE!</h1>
