--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	  <h1>MR KRABS IS IN THERE!</h1>
 	  <h1>STANDING AT THE CONCESSION!</h1>
 	  <h1>PLOTTING HIS OPPRESSION!</h1>
+	   <h1>The Krusty Krab lives in Bikini Bottom. Let that sink in</h1>
     <h2> We have changed this page enough to get full credit ;) </h2>
 	  <p>For next steps, read the AWS CodePipeline Documentation.</p>
 	  <p>This is a test of the Pipeline -- does it autodeploy?</p>
