Updated file to include names :) <3

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <h2> We have changed this page enough to get full credit ;) </h2>
 	  <p>For next steps, read the AWS CodePipeline Documentation.</p>
 	  <p>This is a test of the Pipeline -- does it autodeploy?</p>
+	  <p>Jonas Smith</p>
+	  <p>Dyllan Spille</p>
+	  <p>Steven Brunson</p>
+	  <p>Terence Pierce</p>
   </div>
 </body>
 </html>
