--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 	  <p>Steven Brunson</p>
 	  <p>Terence Pierce</p>
   </div>
+	
+	<p class="🎩-wrapper"><span class="🎩">🎩</span> <span class="🐑">🐻</span></p>
+
+<div class="choose-emojis">
+  <a class="emoji"><span class="e">🐻</span></a>
+  <a class="emoji"><span class="e">🐱</span></a>
+  <a class="emoji"><span class="e">🐶</span></a>
+  <a class="emoji"><span class="e">🐸</span></a>
+  <a class="emoji"><span class="e">🦁</span></a>
+  <a class="emoji"><span class="e">🐵</span></a>
+  <a class="emoji"><span class="e">🐹</span></a>
+  <a class="emoji"><span class="e">🐦</span></a>
+</div>
 </body>
 </html>
 
